issue: in the products/page.tsx the select should show fridges but shows products
